kubernetes/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: anime
          mountPath: /anime
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        hostPath:
          path: /var/lib/k8s/sonarr
      - name: tv
        hostPath:
          path: /media/tv
      - name: anime
        hostPath:
          path: /media/anime
      - name: downloads
        hostPath:
          path: /media/downloads
